change API for flag review
