# src/routes/ticket.controller.js
@@ -1,28 +1,28 @@
 const express = require('express');
 
-const TicketService = require('../services/ticket.service');
+const ReviewTicketService = require('../services/reviewTicket.service');
 const authentication = require('../middlewares/auth.middleware');
 
 const router = express.Router();
-const ticketService = TicketService();
+const reviewTicketService = ReviewTicketService();
 
-router.post('/', authentication, async (req, res) => {
-	if (!req.authenticated) {
-		res.statusMessage = 'Authentication is required to create new ticket.';
-		return res.status(401).end();
-	}
+router.post('/review/', authentication, async (req, res) => {
+	// if (!req.authenticated) {
+	// 	res.statusMessage = 'Authentication is required to create new ticket.';
+	// 	return res.status(401).end();
+	// }
 
 	try {
-		const { newTicket } = await ticketService.createTicket(
+		const { newTicket } = await reviewTicketService.createTicket(
 			req.body
 		);
 
-		res.statusMessage = 'Create new ticket is successful.';
+		res.statusMessage = 'Review flag has been recorded successfully.';
 		return res.status(201).send(newTicket);
 	} catch (err) {
 		console.log(err);
 		res.statusMessage =
-			'There was an error creating the ticket.';
+			'There was an error flagging the review.';
 		return res.status(500).end();
 	}
 });
